# SoftwareRenderer

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  buffer.h  displayManager.cpp  geometry.cpp  main.cpp  matrix.cpp  model.h  objParser.cpp  rasterizer.cpp  scene.cpp  shader.h  softwareRenderer.cpp  texture.cpp  vector3D.h
src/app/engine/: displayManager.cpp  displayManager.h  engine.cpp  engine.h  inputManager.cpp  inputManager.h  renderManager.cpp  renderManager.h  sceneManager.cpp  sceneManager.h  softwareRenderer.cpp  softwareRenderer.h  windowManager.cpp  windowManager.h
src/app/math/: Matrix.h  bound3.h  matrix.cpp  matrix.h  vector3.cpp  vector3.h
src/app/render/: buffer.h  camera.cpp  camera.h  canvas.h  mesh.cpp  mesh.h  model.cpp  model.h  objParser.cpp  objParser.h  rasterizer.cpp  rasterizer.h  scene.cpp  scene.h  shader.h  texture.cpp  texture.h
src/app/structs/: texture.cpp
src/engine/: main.cpp
